css/style.css
@import url("animation.css");
@import url("font.css");

* {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 0;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #e9f5f7;
  font-family: comfortaa, sans-serif;
  color: #15171a;
}

.hidden {
  display: none !important;
}

/* Star trace effect for the mouse cursor */
.star {
  position: absolute;
  width: 14px;
  height: 14px;
  background-color: yellow;
  clip-path:
    polygon(
      50% 0%,
      61% 35%,
      98% 35%,
      68% 57%,
      79% 91%,
      50% 70%,
      21% 91%,
      32% 57%,
      2% 35%,
      39% 35%
    );
  opacity: 1;
  pointer-events: none; /* Ensure stars don't block interactions */
  animation: fade-out 1s forwards;
}

/*
========================================================================================
=====================================  Main Page  ======================================
========================================================================================
*/

#main-page {
  display: flex;
  justify-content: center;
  position: absolute;
  cursor: url("../assets/firefly.png"), auto;
}

/* Setting the background */
#forest-background {
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background:
    linear-gradient(to bottom, blue, #feb47b),
    url("../assets/forest.svg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-blend-mode: multiply;
  z-index: -1; /* Place it behind other content */
}

/* Question mark icon styling */
#question-mark {
  position: absolute;
  top: 5vh;
  right: 5vw;
  width: 10.5vw;
  height: 10.5vw;
  background: url("../assets/question-mark.png");
  background-size: cover;
  z-index: 12;
}

/* Hover effect for the question mark icon */
#question-mark:hover {
  transform: scale(1.2);
}

/* Main categories description box styling */
#main-categories-description {
  position: absolute;
  top: 20vh;
  right: 20vw;
  width: 28vw;
  height: 28vw;
  background: url("../assets/main-categories.jpg");
  background-size: cover;
  border-radius: 30px;
  z-index: 12;
  display: none;
}

/* Display the main categories description box when hovering over the question mark */
#question-mark:hover + #main-categories-description {
  display: block;
}

/* Sun and moon icon styling */
#sun-moon {
  position: absolute;
  top: 5vh;
  left: 5vw;
  width: 14.5vw;
  height: 14.5vw;
  background: url("../assets/Moon.gif");
  background-size: cover;
}

#sun-moon:hover {
  transform: scale(1.2);
}

#sun-moon:active {
  transform: scale(1);
}

/* Cloud animation */
#cloud {
  position: absolute;
  top: 5vh;
  right: 100vw;
  width: 16vw;
  height: 16vw;
  background: url("../assets/Cloud.gif");
  background-size: cover;
  animation: move-right 25s linear infinite;
  z-index: 10;
  pointer-events: none;
}

/* Bird animations */
#bird1 {
  position: absolute;
  top: 15vh;
  right: 100vw;
  width: 7vw;
  height: 7vw;
  background: url("../assets/Bird-purple.gif");
  background-size: cover;
  animation: move-left 18s linear infinite;
  z-index: 11;
  pointer-events: none;
}

#bird2 {
  position: absolute;
  top: 20vh;
  right: 100vw;
  width: 7vw;
  height: 7vw;
  background: url("../assets/Bird-red.gif");
  background-size: cover;
  animation: move-right 18s linear infinite;
  z-index: 11;
  pointer-events: none;
}

#bird3 {
  position: absolute;
  top: 30vh;
  right: 100vw;
  width: 7vw;
  height: 7vw;
  background: url("../assets/Bird-yellow.gif");
  background-size: cover;
  animation: move-left 15s linear infinite;
  z-index: 11;
  pointer-events: none;
}

/* Star animations */
.stars {
  position: absolute;
  top: 0;
  width: 17vw;
  height: 17vw;
  background: url("../assets/Stars.gif");
  background-size: cover;
  pointer-events: none;
}

#stars1 {
  left: 15vw;
}

#stars2 {
  right: 15vw;
}

/* Rabbit animation */
#rabbit {
  position: absolute;
  bottom: 5vh;
  right: 100vw;
  width: 20vw;
  height: 20vw;
  background: url("../assets/Rabbit.gif");
  background-size: cover;
  animation: move-left 25s linear infinite;
  z-index: 2;
  pointer-events: none;
}

/* Calendar icon styling */
#calendar-journal {
  position: absolute;
  bottom: 3vh;
  right: 8vw;
  width: 20vw;
  height: 20vw;
  background: url("../assets/calendar.png");
  background-size: cover;
  z-index: 1;
}

#calendar-journal:hover {
  background: url("../assets/calendar-removing-page.png");
  background-size: cover;
}

#calendar-journal:active {
  transform: scale(0.9);
}

/* Whiteboard icon styling */
#creative-play {
  position: absolute;
  bottom: 5vh;
  left: 10vw;
  width: 20vw;
  height: 20vw;
  background: url("../assets/white-board.png");
  background-size: cover;
  transform: rotate(-15deg);
  z-index: 3;
}

#creative-play:hover {
  background: url("../assets/white-board-with-letters.png");
  background-size: cover;
  transform: rotate(-15deg);
}

#creative-play:active {
  transform: rotate(-15deg) scale(0.9);
}

/* Goal icon styling */
#goal-setting {
  position: absolute;
  bottom: 3vh;
  right: 25vw;
  width: 20vw;
  height: 20vw;
  background: url("../assets/goal.png");
  background-size: cover;
  transform: rotate(8deg);
  z-index: 3;
}

#goal-setting:hover {
  background: url("../assets/goal-with-arrow.png");
  background-size: cover;
  transform: rotate(8deg);
}

#goal-setting:active {
  transform: rotate(8deg) scale(0.9);
}

/* Reward icon styling */
#reward {
  position: absolute;
  bottom: 3vh;
  left: 30vw;
  width: 13vw;
  height: 13vw;
  background: url("../assets/reward.png");
  background-size: cover;
  transform: rotate(-2deg);
  z-index: 3;
}

#reward:hover {
  background: url("../assets/reward2.png");
  background-size: cover;
  transform: rotate(-2deg);
}

#reward:active {
  transform: rotate(-2deg) scale(0.9);
}

/*
========================================================================================
===============================  Calendar/Journal Page  ================================
========================================================================================
*/

#calendar-journal-page {
  height: 90vh;
}

.search-bar-container {
  margin-top: 10px; /* Adjust as needed */
}

#search-bar {
  display: flex;
  justify-content: right;
  align-items: right;
  border-radius: 4px;
  margin-right: 40px; /* Adjust margin-right to move the search bar to the left */
}

#search-bar input[type="text"] {
  padding: 8px;
  width: 8vw;
  height: 1vh;
  border: 3px solid #3ddf0c;
  border-radius: 4px;
  font-family: "Comic Sans MS", cursive; /* Change the font */
}

#search-bar button {
  padding: 5px 16px;
  margin-left: 10px;
  background-color: #3ddf0c; /* Bootstrap primary color */
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: "Comic Sans MS", cursive; /* Change the font */
}

#search-bar input[type="text"]:focus {
  border-radius: 4px;
  border-color: #0056b3; /* Change border color on focus */
  outline: none;
}

#search-bar button:hover {
  background-color: #0056b3; /* Darker shade of primary color */
}

/*
========================================================================================
=================================  Goal-Setting Page  ==================================
========================================================================================
*/

#goals-container {
  margin-top: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 3vw;
}

#goals-container h1 {
  margin: auto;
  padding: 10px;
  text-align: center;
}

#goals-container section {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid rgb(67 205 205);
  border-radius: 25px;
  width: 28vw;
  height: 70vh;
  background-color: floralwhite;
}

#goals-container section:hover {
  border-width: 6px;
}

.list-container {
  font-family: lxgw, sans-serif !important;
  font-size: 18px;
  width: 23vw;
  height: 62vh;
  display: flex;
  flex-direction: column;
  gap: 2vh;
}

#goal-setting-page img {
  height: 18px;
  padding-left: 1vw;
  cursor: pointer;
}

#goal-setting-page img:hover {
  transform: scale(1.1);
}

#goal-setting-page img:active {
  transform: scale(1);
}

.plus-button {
  width: 20px;
  height: 20px;
  margin-right: 1vw;
}

.goal-input {
  width: 15vw;
  height: 20px;
  font-size: 16px;
  font-family: lxgw, sans-serif !important;
}

/* Responsive Styles */
@media (width <= 1400px) {
  #goals-container h1 {
    font-size: 24px;
  }

  .list-container {
    font-size: 16px;
  }

  #goal-setting-page img {
    height: 16px;
  }
}

@media (width <= 1200px) {
  #goals-container h1 {
    font-size: 20px;
  }

  .list-container {
    font-size: 14px;
  }

  #goal-setting-page img {
    height: 14px;
  }
}

@media (width < 1000px) {
  #goals-container h1 {
    font-size: 18px;
  }

  .list-container {
    font-size: 12px;
  }

  #goal-setting-page img {
    height: 12px;
  }
}

